# Bestellverwaltung

./: .gitignore  README.md  RELEASE_NOTES.md  bestellverwaltung.db  bestellverwaltung.py  bestellverwaltung_BACKUP_20251229_152424.db  bestellverwaltung_BACKUP_20251230_002306.db  clean_prices.py  daily_backup.py  migrate_db.py  pyproject.toml  register_backup_task.ps1  run_daily_backup.bat  version
